c4prj2_input/grade.txt
Grading at Sat Dec  5 15:49:21 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘copyCard’:
future.c:16:19: error: invalid type argument of ‘->’ (have ‘card_t {aka struct card_tag}’)
   dest->suit = src->suit;
                   ^
future.c:17:20: error: invalid type argument of ‘->’ (have ‘card_t {aka struct card_tag}’)
   dest->value = src->value;
                    ^
future.c: In function ‘add_future_card’:
future.c:21:22: error: incompatible types when initializing type ‘deck_t * {aka struct deck_tag *}’ using type ‘deck_t {aka struct deck_tag}’
   deck_t *cur_deck = fc->decks[index];
                      ^
future.c:25:36: error: incompatible type for argument 2 of ‘copyCard’
       copyCard(cur_deck->cards[j], ptr);
                                    ^
future.c:15:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void copyCard(card_t * dest, card_t src){
      ^
future.c: In function ‘future_cards_from_deck’:
future.c:41:29: error: expected expression before ‘)’ token
       add_future_card(fc, i,)
                             ^
Compilation of future.c failed

Overall Grade: F
